--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "seed": "node -r dotenv/config ./scripts/seed.js"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.39.0",
+    "@tanstack/react-query-devtools": "^5.39.0",
     "@vercel/postgres": "^0.8.0",
     "bcrypt": "^5.1.1",
     "next": "14.2.3",
